<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_MessageList" Id="{9678d9cf-ba1c-450a-b44e-8b9622bb7f57}">
    <Declaration><![CDATA[TYPE ST_MessageList :
STRUCT
  bValid        : BOOL;
  iIndex        : INT;
  iIndexOld     : INT;
  sTextBox      : string(1024);
  atMessages    : ARRAY[1..GVL_AXIS_CTRL.gciMaxMessage] OF ST_MessageVis;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>