<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_MessageVis" Id="{171ddca2-9b11-448c-9a3a-db7b16502f12}">
    <Declaration><![CDATA[TYPE ST_MessageVis :
STRUCT
  eType         : STRING;
  sDevice       : STRING;
  sSubdevice    : STRING;
  iErrorNumber  : UDINT;
  sTime         : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>